<resources>
    <string name="app_name">TestApp</string>
    <string name="split">В 2 колонки</string>
    <string name="delete">Удалить</string>
    <string name="delete_canceled">Задача не удалена</string>
    <string name="delete_OK">Задача удалена</string>
    <string name="title_add_task_text">Новый текст</string>
    <string name="title_add_task_photo">Новое фото</string>
    <string name="title_add_task_list">Новый список</string>
    <string name="task_title_hint">Название</string>
    <string name="task_content_hint">Текст</string>
    <string name="save_canceled">Данные не сохранены</string>
    <string name="save_OK">Данные сохранены</string>
    <string name="save">Сохранить</string>
    <string name="text_translate">Перевести</string>
    <string name="share">Поделиться</string>
    <string name="new_photo">Сделать новое</string>
    <string name="open_gallery">Взять из галереи</string>
    <string name="new_cb">+ Новый пункт</string>
    <string name="new_text">Текст задачи</string>
    <string name="action_mode">Удалить</string>
    <string name="photo_chanceled">Фото не сделано</string>
    <string name="image_chanceled">Изображение не получено</string>
    <string name="translate_completed">Перевод завершён!</string>
    <string name="translate_fail">Ошибка перевода!</string>
    <string name="no_external">Нет доступа к хранилищу</string>
    <string name="task_changed">Задача изменена</string>
    <string name="task_chanceled">Ошибка изменения</string>
    <string name="add_photo">Добавление фото</string>
    <string name="choose_source">Выберите источник</string>
    <string name="new_cam_photo">Сделать новое</string>
    <string name="gallery_photo">Взять из галереи</string>
    <string name="more_elements">. . .</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_diag">К диаграмме</string>
    <string name="to_view_pager">View Pager</string>
    <string name="to_task_list">Task List</string>
    <string name="change_repo">Change repository</string>
    <string name="to_content_provider">content provider</string>
    <string name="no_email_value">Не задан</string>
    <string name="drawer_open">Открыть</string>
    <string name="drawer_close">Закрыть</string>
    <string name="choice_accept">Подтвердить выбор</string>
    <string name="contact_img">contact_img</string>
    <string name="emailTitle">e-mail:</string>
    <string name="phoneTitle">phone:</string>
    <string name="nameTitle">name:</string>
    <string name="call_phone">Вызвать номер</string>
    <string name="connect_info_title">Сведения о подключении</string>
    <string name="internet_on">Выполнено подключение к интернету</string>
    <string name="show_contacts">Показать контакты</string>
    <string name="show_events">Показать события</string>
    <string name="diag_trans_button">diag_trans_button</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="content_provider_placeholder">Потяни влево для выбора</string>
    <string name="view_pager_title">View Pager</string>
    <string name="diagram_title">Diagram</string>
    <string name="start_title">Start</string>
    <string name="animation_title">Animation</string>
    <string name="list_task_title">List of tasks</string>
    <string name="task_list_main_title">Task List</string>
    <string name="text_task_title">Text task</string>
    <string name="js_get_lessonTitle">"javascript:(function(){var testVal = document.getElementsByClassName(\"list-title\")[0].innerHTML; AndroidFunction.showToast(testVal);return \"1\"})();"</string>
    <!--<string name="js_get_lessonTitle">"javascript:(function(){return document.getElementsByClassName(\"list-title\")[0].innerHTML;})();"</string>-->
    <string name="open_contact_button_text">Открыть_контакт</string>
    <string name="show_animation_button_text">Показать анимашку</string>
    <string name="go_to_webview_button_text">Перейти на вебвью</string>
    <string name="web_view_title">Web Viewer</string>
    <string name="start_android_lessons_page">https://startandroid.ru/ru/uroki/vse-uroki-spiskom.html</string>
    <string name="start_android_main_page">https://startandroid.ru</string>
    <string name="your_task_title">Ваша задача:</string>
    <string name="no_tasks">No tasks</string>
    <string name="date_time_picker_title">Picker</string>
    <string name="set_date_button">Установить дату</string>
    <string name="set_time_button">Установить время</string>
    <string name="button_to_datetime_picker">Перейти к пикеру</string>
    <string name="button_to_map_text">К карте</string>
    <string name="stop_and_build_button">Останови и строй</string>
    <string name="button_to_cam">К камере</string>
</resources>
